# AutStr

./: .buildinfo  .gitattributes  .gitignore  .pre-commit-config.yaml  FINALIZING.md  Makefile  README.md  autstr.buildin.html  autstr.html  autstr.utils.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.doctrees/: autstr.buildin.doctree  autstr.doctree  autstr.utils.doctree  environment.pickle  index.doctree  modules.doctree
.doctrees/api/: autstr.buildin.doctree  autstr.doctree  autstr.utils.doctree  modules.doctree
.github/workflows/: publish.yaml  run_docs.yaml  run_tests.yaml  update-media.yaml
_modules/: index.html
_modules/autstr/: algebra.html  arithmetic.html  composition.html  graphs.html  groups.html  mtbdd.html  presentations.html  sparse_automata.html  sparse_tree_automata.html  tree_graphs.html  tree_groups.html  tree_presentations.html  tree_uniform.html  uniform.html
_modules/autstr/buildin/: automata.html  presentations.html  tree_presentations.html
_modules/autstr/utils/: automata_tools.html  logic.html  misc.html  tree_automata_tools.html
_sources/: autstr.buildin.rst.txt  autstr.rst.txt  autstr.utils.rst.txt  index.rst.txt  modules.rst.txt
_sources/api/: autstr.buildin.rst.txt  autstr.rst.txt  autstr.utils.rst.txt  modules.rst.txt
api/: autstr.buildin.html  autstr.html  autstr.utils.html  modules.html
austr/: arithmetic.py  presentations.py
austr/buildin/: automata.py  presentations.py
austr/utils/: automata.py  automata_tools.py  logic.py  misc.py
autstr/: _version.py  algebra.py  arithmetic.py  chain_ring.py  closure.py  cocycle_groups.py  composition.py  graphs.py  groups.py  implicit.py  mtbdd.py  presentations.py  sparse_automata.py  sparse_tree_automata.py  tree_graphs.py  tree_groups.py  tree_presentations.py  tree_uniform.py  uniform.py
autstr/buildin/: automata.py  presentations.py  tree_presentations.py
autstr/symbolic/: __init__.py  backends.py  compiler.py  context.py  expr.py  signature.py
autstr/utils/: automata_tools.py  logic.py  misc.py  tree_automata_tools.py
benchmarks/: README.md  _bench_common.py  abelian_group_benchmark.py  extraspecial_group_benchmark.py  implicit_vs_explicit.py  pathwidth_graph_benchmark.py  runtime_curves.py  tree_class_benchmark.py  uniform_graph_benchmark.py
docs/source/: conf.py  index.rst  overview.md
notebooks/: algebra_showcase.ipynb  arithmetic.ipynb  arithmetic_and_algebra.ipynb  automata_sparsity_benchmarks.ipynb  büchi.ipynb  composition.ipynb  demo.ipynb  graphs.ipynb  groups.ipynb  groups_showcase.ipynb  implicit_evaluation.ipynb  mso0.ipynb  tree_classes.ipynb  treedepth_graphs.ipynb
paper/: .gitignore  main.tex  refs.bib  scratch-chainring.tex  theorem3-notes.md
scripts/: gen_gource_gif.sh  gen_readme_media.py
tests/: test.py  test_algebra.py  test_arithmetic.py  test_automata_tools.py  test_chain_ring.py  test_clique_width.py  test_closure.py  test_cocycle_groups.py  test_composition.py  test_equality.py  test_graphs.py  test_groups.py  test_implicit.py  test_infinite_extraspecial.py  test_rank_width.py  test_serialization.py  test_skolem.py  test_symbolic.py  test_symbolic_tree.py  test_tree_automata.py  test_tree_graphs.py  test_tree_groups.py  test_tree_presentations.py  test_tree_tools.py  test_tree_uniform.py  test_uniform.py
