[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "autstr"
version = "2.0.0"
description = "Library for working with finitely presentable infinite structures"
readme = "README.md"
authors = [
    { name = "Faried Abu Zaid", email = "fariedaz@gmail.com" }
]
license-files = ["LICENSE"]
keywords = ["automatic structures", "automata", "model theory", "first-order logic", "MSO"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpy>=1.24",
    "nltk~=3.7",
    "graphviz>=0.21,<0.22",
]
requires-python = ">=3.10,<3.15"

[project.urls]
Repository = "https://github.com/fariedabuzaid/AutStr"

[project.optional-dependencies]
# JAX only accelerates batched word processing (SparseDFA.accepts_batch);
# everything else runs on numpy.
jax = ["jax>=0.4.13"]
# networkx conversion for the graph packages (autstr.graphs)
graphs = ["networkx>=3.0"]

[dependency-groups]
dev = [
    "pytest~=7.4.0",
    "pytest-cov~=4.1.0",
    "pytest-mock~=3.10.0",
    "pytest-asyncio>=0.22.0",
    "networkx>=3.0",
    "jupyter>=1.1.1,<2.0.0",
    "ipykernel>=6.29.5",
    "sphinx-autodoc-typehints~=1.19.2",
    "black~=23.9.1",
    "isort~=5.12.0",
    "mypy~=1.11.0",
    "flake8~=6.1.0",
    "pre-commit~=3.2.0",
]

[tool.setuptools.packages.find]
include = ["autstr*"]

[tool.setuptools.package-data]
"autstr.buildin" = ["bin/*.autstr"]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poetry-dynamic-versioning.substitution]
files = ["autstr/_version.py"]
pattern = '__version__ = ".*"'
