[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "autstr"
version = "3.0.0"
description = "Library for working with finitely presentable infinite structures"
readme = "README.md"
authors = [
    { name = "Faried Abu Zaid", email = "fariedaz@gmail.com" }
]
license-files = ["LICENSE"]
keywords = ["automatic structures", "automata", "model theory", "first-order logic", "MSO"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpy>=1.24",
    "nltk~=3.7",
    "graphviz>=0.21,<0.22",
]
requires-python = ">=3.10,<3.15"

[project.urls]
Repository = "https://github.com/fariedabuzaid/AutStr"

[project.optional-dependencies]
# JAX only accelerates batched word processing (SparseDFA.accepts_batch);
# everything else runs on numpy.
jax = ["jax>=0.4.13"]
# networkx conversion for the graph packages (autstr.graphs)
graphs = ["networkx>=3.0"]
# plotting for the runtime-curve benchmark (benchmarks/runtime_curves.py)
benchmarks = ["matplotlib>=3.5"]
# everything the test suite needs (networkx for the graph classes)
test = ["pytest>=7.4", "networkx>=3.0"]
# building the API documentation from the docstrings
docs = ["sphinx>=7.2", "furo>=2024.1", "sphinx-autodoc-typehints>=1.25", "networkx>=3.0"]

[dependency-groups]
dev = [
    "pytest~=7.4.0",
    "pytest-cov~=4.1.0",
    "pytest-mock~=3.10.0",
    "pytest-asyncio>=0.22.0",
    "networkx>=3.0",
    "jupyter>=1.1.1,<2.0.0",
    "ipykernel>=6.29.5",
    "sphinx-autodoc-typehints~=1.19.2",
    "black~=23.9.1",
    "isort~=5.12.0",
    "mypy~=1.11.0",
    "flake8~=6.1.0",
    "pre-commit~=3.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["autstr*"]

[tool.setuptools.package-data]
"autstr.buildin" = ["bin/*.autstr"]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poetry-dynamic-versioning.substitution]
files = ["autstr/_version.py"]
pattern = '__version__ = ".*"'
